# ParaCL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ast.dot  conanfile.txt  debug-start.sh  format.sh  manual_for_collaborators.ipynb  release-ast.dot  start.sh
.github/workflows/: regression.yml
AST/: CMakeLists.txt  README.md
AST/include/: create-basic-node.hpp  read-ast.hpp
AST/src/ast/: ast.cppm
AST/src/functional/: build-program.cppm  graphic-dump.cppm  write.cppm
AST/src/nodes/: nodes-type-erasure.cppm  nodes.cppm
AST/tests/: test.cpp
Compiler/backend/: CMakeLists.txt
Compiler/backend/src/: main.cpp
Compiler/backend/src/compiler/: compiler.cppm
Compiler/backend/src/errors/: errors.cppm
Compiler/backend/src/exceptions/: exceptions.cppm
Compiler/backend/src/llvm-ir-translator/: functions-table.cppm  libc-standard-functions.cppm  llvm-ir-translator.cppm  nametable.cppm
Compiler/cmake/tests/e2e/: add-e2e-to-target-function.cmake
Compiler/src/: paracl.cpp
Compiler/tests/e2e/: parse_result.py
Compiler/tests/e2e/ans/: 0053.ans  0059.ans  0061.ans
Compiler/tests/e2e/dat/: 0048.cl  0050.in  0051.cl  0053.cl  0054.cl  0055.cl  0059.cl  0061.cl  0062.cl  0065.cl  0066.cl
Frontend/: CMakeLists.txt
Frontend/general/: general.cppm
Frontend/lexer/src/: lexer.l
Frontend/parser/: check_variables.cpp  check_variables.hpp  parse_error.cpp  parse_error.hpp  parser.y  tmp.y
Frontend/src/: main.cpp
Interpreter/backend/src/interpreter/: interpreter.cppm
Interpreter/src/: paracl.cpp
Interpreter/tests/e2e/: parse_result.py
Interpreter/tests/e2e/ans/: 0051.ans
Interpreter/tests/e2e/dat/: 0050.cl  0051.in
Interpreter/tests/e2e/dat/dat/: 0028.cl  0052.cl
TestGenerator/: CMakeLists.txt
TestGenerator/src/: gloabal-create-settings.cppm  main.cpp
TestGenerator/src/ast-serializer/: ast-serializer.cppm
TestGenerator/src/generator/: generator.cppm  name-inserter.cppm
TestGenerator/src/generator/name-generator/: name-generator.cppm  nametable.cppm  test.cpp
TestGenerator/src/generator/nametable/: nametable.cppm
cmake/: debug.cmake  logger.cmake
cmake/dep/: check-flex.cmake
cmake/tests/e2e/: add-e2e-to-target-function.cmake
debug/ast/: ast-graph-dump.cppm  ast-text-dump.cppm
debug/in/: run_test.sh.in
debug/log/: log_api.hpp
debug/log/spdlog-init/: spdlog_init.cppm
debug/parse_program_output/: parse_result.py
debug/stacktrace/: exceptions-stacktrace.cppm
front/: CMakeLists.txt
front/imgs/: ast.dot
front/inc/: paraCL.hpp  token_t.hpp
front/src/: lexer.cpp  main.cpp  parcer.cpp
imgs/: ast.dot
include/frontend/parser/: ast.hpp  check_variables.hpp  parse_error.hpp  parser_exceptions.hpp  token_types.hpp
include/global/: global.hpp
log/: global.html
src/: main.cpp  paracl.cpp
src/ast/: README.md  ast.cppm  graphic-dump.cppm  node-traits.cppm  node-type-erasure.cppm  nodes.cppm  read.cppm  test.cpp  write.cppm
src/back/inc/: paraCL.hpp  paraCL_crutch_for_parsery.hpp  token_t.hpp
src/back/src/: compiler.cpp  compiler.cppm  dump.cpp  dump.cppm  paraCL.cppm  parser.y
src/backend/: CMakeLists.txt  README.md  interpreter.cppm  name_table.cppm  parse_paracl_exceptions.cppm  run_paracl.cppm
src/backend/basic_name_table/: basic_name_table.cppm
src/backend/compiler/: toolchain.cppm
src/backend/compiler/linker/: linker.cppm
src/backend/compiler/llvm_ir_translator/: libc_stadart_functions.cppm  name_table.cppm  translate_to_llvm_ir.cppm
src/backend/interpreter/: interpreter.cppm  name_table.cppm  nametable.cppm
src/backend/interpretor/: interpreter.cppm
src/backend/llvm_ir_translator/: name_table.cppm  translate_to_llvm_ir.cppm
src/backend/src/: backend.cppm
src/backend/toolchain/compiler/: objects_builder.cppm
src/front/inc/: lexer.hpp
src/front/src/: lexer.l
src/frontend/: CMakeLists.txt
src/frontend/lexer/: lexer.l
src/frontend/parser/: check_variables.cpp  parse_error.cpp  parser.y  parser_exceptions.cpp
src/frontend/src/: frontend.cppm
src/frontend/src/AST/: CMakeLists.txt  README.md
src/frontend/src/AST/include/: create-basic-node.hpp
src/frontend/src/AST/src/ast/: ast.cppm
src/frontend/src/AST/src/functional/: graphic-dump.cppm  write.cppm
src/frontend/src/AST/src/lib-info/: lib-info.cppm.in
src/frontend/src/AST/src/nodes/: code-location.cppm  nodes-traits.cppm  nodes-type-erasure.cppm  nodes.cppm
src/frontend/src/errors/: CMakeLists.txt
src/frontend/src/errors/src/: errors.cppm
src/frontend/src/grammar/: CMakeLists.txt
src/frontend/src/grammar/src/: ast-reader.cppm
src/frontend/src/grammar/src/errors/: errors.cppm
src/frontend/src/grammar/src/lexer/: lexer.l
src/frontend/src/grammar/src/parser/: parser.y
src/frontend/src/llvm-ir-translator/: CMakeLists.txt
src/frontend/src/llvm-ir-translator/src/: functions-table.cppm  libc-standard-functions.cppm  llvm-ir-translator-context.cppm  llvm-ir-translator.cppm  nametable.cppm  nodes-functional.cppm
src/options/: CMakeLists.txt  compiler_options.cppm  interpreter_options.cppm  options.cppm
src/options/src/: options.cppm  read-options.cppm
src/options_parser/: options_parser.cppm
src/paracl/: paracl_extension.cppm  parse_paracl_exit_code.cppm  run_paracl.cppm
src/paracl_info/: paracl_info.cppm.in
src/toolchain/: toolchain.cppm
testGenerator/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt
tests/e2e/ans/: 0026.ans
tests/e2e/dat/: 0001.cl  0002.cl  0004.cl  0005.cl  0006.cl  0007.pcl  0008.cl  0009.cl  0011.pcl  0012.pcl  0013.pcl  0015.cl  0016.pcl  0017.pcl  0018.pcl  0020.cl  0021.cl  0022.cl  0023.cl  0024.cl  0025.pcl  0026.cl  0027.cl  0028.cl  0031.cl  0032.cl  0033.cl  0038.cl  0044.cl  rename.sh
tests/e2e/src/: parse_result.py  run_test.sh.in
tests/e2e/src/ans/: 0047.ans  0048.ans  0049.ans  0050.ans  0055.ans  0067.ans  0071.ans
tests/e2e/src/dat/: 0002.cl  0046.cl  0047.cl  0048.in  0049.cl  0049.in  0055.cl  0056.cl  0057.cl  0060.cl  0063.cl  0064.cl  0067.cl  0068.cl  0069.cl  0070.cl  0071.cl
tests/unit/options_parser/: options_parser.cpp
